--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,96 +1,93 @@
 .navbar-uncompressed {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    z-index: 9999;
-    background-color: rgba(9, 3, 15, 0.9);
-
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 9999;
+  background-color: rgba(9, 3, 15, 0.9);
 }
 
-
 .navbar {
-    padding: 0.5em;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    margin: 0;
+  padding: 0.5em;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin: 0;
 }
 
 #home {
-    padding: 1em;
-    align-self: center;
+  padding: 1em;
+  align-self: center;
 }
 
 .nav-link {
-    padding: 1em;
-    color: var(--default-font-color);
-    text-decoration: none;
-    transition: all 0.5s ease-in-out;
-
+  padding: 1em;
+  color: var(--default-font-color);
+  text-decoration: none;
+  transition: all 0.5s ease-in-out;
 }
 
 .nav-link:hover {
-    background-color: rgb(36, 28, 45);
-    color: var(--default-secundary-font-color) !important
+  background-color: rgb(36, 28, 45);
+  color: var(--default-secundary-font-color) !important;
 }
 
 .nav-link:visited {
-    color: var(--default-font-color);
-    text-decoration: none;
-    background-image: none;
+  color: var(--default-font-color);
+  text-decoration: none;
+  background-image: none;
 }
 
-.navbar>li {
-    align-self: center;
+.navbar > li {
+  align-self: center;
 }
 
 .navbar-compressed {
-    display: none;
-    position: fixed;
-    top: 0;
-    width: 100%;
-    z-index: 2;
-    background-color: rgb(38, 26, 50);
-
+  display: none;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 2;
+  background-color: rgb(38, 26, 50);
 }
 
 .nav-header-menu {
-    position: absolute;
-    padding: 0.5em;
-    z-index: 3;
-    width: 100%;
-    background-color: rgb(38, 26, 50);
+  position: absolute;
+  padding: 1em;
+  z-index: 2;
+  width: 100%;
+  background-color: rgb(38, 26, 50);
 }
 
 #nav-columnar-menu {
-    position: absolute;
-    margin-top: 0;
-    padding-left: 0;
-    height: 40vh;
-    background-color: rgb(38, 26, 50);
-    width: 100%;
-    z-index: 2;
-    top: -40vh;
-    transition: all 0.3s ease-in;
-
+  position: absolute;
+  margin-top: 0;
+  padding:2em;
+  background-color: rgb(38, 26, 50);
+  width: 60%;
+  z-index: 3;
+  left: -100vw;
+  list-style-type: none;  
+  transition: all 0.3s ease-in;
 }
 
 #nav-columnar-menu.active {
-    top: 1em;
-    transition: all 0.8s ease-in;
+  transition: all 0.8s ease-in;
+  width: 60%;
+  left: 0;
 
+  height: 100vh;
 }
 
 .nav-element {
-    text-align: center;
-    padding: 0.5em;
-    transition: all 0.5s ease-in-out;
+  text-align: left;
+  padding: 0.5em;
+  transition: all 0.5s ease-in-out;
 }
 
 .nav-element:hover {
-    background-color: rgb(36, 28, 45);
+  background-color: rgb(36, 28, 45);
 }
 
 .nav-link.compressed {
-    padding: 0;
+  padding: 0;
 }
