--- a/css/styles.css
+++ b/css/styles.css
@@ -46,7 +46,9 @@ section {
 }
 
 .opacity-effect {
-  filter: opacity(20%) grayscale(70%);
+  filter: opacity(50%);
+  -webkit-filter:  opacity(50%) ;
+  /* backdrop-filter: opacity(20%) grayscale(70%); */
 }
 
 
