--- a/css/navbar.css
+++ b/css/navbar.css
@@ -78,6 +78,7 @@
   position: absolute;
   margin-top: 0;
   background-color: rgb(38, 26, 50);
+  padding:0;
   width: 70%;
   height: 100vh;
   left: -100vw;
@@ -87,14 +88,16 @@
 #nav-columnar-menu.active {
   left: 0;
   transition: all 0.8s ease-in;
-  /* background-color: rgba(0, 0, 0, 0.452); */
-
 }
 
 .nav-element {
+  display: flex;
   text-align: left;
   padding: 0.5em;
+  padding-left: 2em;
   transition: all 0.5s ease-in-out;
+  justify-content: flex-start;
+  align-items: center;
 }
 
 .nav-element:hover {
