--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,10 +1,16 @@
-img {
-  width: 50%;
+.logo {
   border-radius: 50%;
+  transform: rotate(180deg);
+  transition: all 0.4s ease-in;
+}
+.logo.active {
+  transform: rotate(0deg);
+  transition: all 0.8s ease-in;
 }
 .image-container {
-  padding: 25%;
-  width: 100%;
+  padding: 15%;
+  width: 70%;
+  text-align: center;
 }
 .navbar-uncompressed {
   position: fixed;
