--- a/css/navbar.css
+++ b/css/navbar.css
@@ -2,6 +2,8 @@
   border-radius: 50%;
   transform: rotate(180deg);
   transition: all 0.4s ease-in;
+  width: 150rem;
+  height: 150rem;
 }
 .logo.active {
   transform: rotate(0deg);
