--- a/css/presentation-section.css
+++ b/css/presentation-section.css
@@ -1,38 +1,36 @@
 .presentation {
-    color: var(--default-font-color);
-    font-family: var(--default-font-family);
-    padding: 1em;
-  
+  color: var(--default-font-color);
+  font-family: var(--default-font-family);
+  padding: 1em;
 }
 
-#presentation-title {
-    font-size: 2.6rem;
-    color: var( --default-secundary-font-color);
-    animation: 1s show-presentation ease;
-    margin-top: 0.7rem;
-    margin-bottom: 0.7rem;
+.presentation-title {
+  font-size: 2.5rem;
+  color: var(--default-secundary-font-color);
+  animation: 1s show-presentation ease;
+  margin-top: 0.7rem;
+  margin-bottom: 0.7rem;
 }
 
-#presentation-main-skill {
-    font-size: 2rem;
-    opacity: 0;
-    animation-name: show-presentation-main-skill;
-    animation-timing-function: ease;
-    animation-duration: 1s;
-    animation-delay: 0.2s;
-    animation-fill-mode: forwards;
-    margin-top: 0.7rem;
-    margin-bottom: 0.7rem;
+.presentation-main-skill {
+  font-size: 1.8rem;
+  opacity: 0;
+  animation-name: show-presentation-main-skill;
+  animation-timing-function: ease;
+  animation-duration: 1s;
+  animation-delay: 0.2s;
+  animation-fill-mode: forwards;
+  margin-top: 0.7rem;
+  margin-bottom: 0.7rem;
 }
 
 #presentation-description {
-    opacity: 0;
-    animation-name: show-presentation-main-skill;
-    animation-timing-function: ease;
-    animation-duration: 1s;
-    animation-delay: 0.4s;
-    animation-fill-mode: forwards;
-    margin-top: 0.7rem;
-    margin-bottom: 0.7rem;
+  opacity: 0;
+  animation-name: show-presentation-main-skill;
+  animation-timing-function: ease;
+  animation-duration: 1s;
+  animation-delay: 0.4s;
+  animation-fill-mode: forwards;
+  margin-top: 0.7rem;
+  margin-bottom: 0.7rem;
 }
-
