--- a/css/styles.css
+++ b/css/styles.css
@@ -100,6 +100,7 @@ hr {
   flex-direction: column;
   justify-content: center;
   height: 90%;
+  padding: 1rem;
 }
 
 @keyframes show-presentation {
