--- a/css/styles.css
+++ b/css/styles.css
@@ -39,9 +39,10 @@ section {
   /* border: solid 3px aqua; */
   width: 60%;
   margin: 0 auto;
-  margin-top: 2.5em;
-  margin-bottom: 2.5em;
-  height: calc(100vh - 5em);
+  margin-top: 3em;
+  margin-bottom: 3em;
+  padding-top: 3em;
+  height: calc(100vh - 6em);
   z-index: 2;
 }
 
