--- a/css/navbar.css
+++ b/css/navbar.css
@@ -75,7 +75,7 @@
   box-shadow: 0px 0px 20px;
 }
 
-#nav-columnar-menu-background {
+.nav-columnar-menu-background {
   visibility: hidden;
   position: absolute;
   padding: 0em;
@@ -88,7 +88,7 @@
   background-color: rgba(0, 0, 0, 0);
   transition: all 0.3s 0.1s ease-in;
 }
-#nav-columnar-menu-background.active {
+.nav-columnar-menu-background.active {
   background-color: rgba(0, 0, 0, 0.5);
   transition: all 0.8s ease-in;
 }
@@ -102,13 +102,13 @@
   left: -100vw;
   transition: all 0.3s ease-out;
 }
-#nav-columnar-menu-list {
-  list-style-type: none;
-  padding: 0;
-}
 #nav-columnar-menu.active {
   left: 0;
   transition: all 0.6s ease-out;
+}
+#nav-columnar-menu-list {
+  list-style-type: none;
+  padding: 0;
 }
 
 .nav-element {
