--- a/css/styles.css
+++ b/css/styles.css
@@ -173,6 +173,21 @@ hr {
 .icon-google {
   background-image: url(../images/google.svg);
 }
+.icon-house {
+  background-image: url(../images/house.svg);
+}
+.icon-user {
+  background-image: url(../images/user.svg);
+}
+.icon-phone {
+  background-image: url(../images/phone.svg);
+}
+.icon-bars {
+  background-image: url(../images/bars.svg);
+}
+.icon-file-code {
+  background-image: url(../images/file-code.svg);
+}
 .svg-icon {
   background-repeat: no-repeat;
   display: inline-block;
@@ -187,11 +202,15 @@ hr {
   filter: invert(0%) sepia(95%) saturate(0%) hue-rotate(273deg) brightness(105%)
     contrast(101%) drop-shadow(0rem 0rem 1rem aqua);
 }
-/* .svg-icon > img {
-  fill: aqua;
-  height: inherit;
-} */
 
+.svg-icon-m {
+  height: 2rem;
+  width: 2rem;
+}
+.svg-icon-s {
+  height: 1.5rem;
+  width: 1.5rem;
+}
 @media (max-width: 1100px) {
   :root {
     font-size: 25px;
