--- a/css/project-section.css
+++ b/css/project-section.css
@@ -11,7 +11,7 @@
   display: flex;
   flex-direction: column;
   font-family: var(--default-font-family);
-  box-shadow: 0.8rem 0.8rem 5px rgb(15, 12, 20);
+  box-shadow: 0.6rem 0.6rem 0.5rem var(--default-background-color-shadow);
   background-color: rgb(48, 37, 65);
   border-radius: 0.2rem;
   border: solid 0.1rem var(--default-secundary-font-color);
