--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,7 @@
   --default-font-color: rgb(222, 207, 253);
   --default-secundary-font-color: rgb(6, 232, 232);
   --default-background-color: rgb(36, 23, 48);
+  --default-background-color-shadow: rgb(15, 12, 20);
   background-color: var(--default-background-color);
   font-size: 25px;
   scroll-behavior: smooth;
