--- a/css/presentation-section.css
+++ b/css/presentation-section.css
@@ -8,8 +8,7 @@
   font-size: 2.4rem;
   color: var(--default-secundary-font-color);
   animation: 1s show-presentation ease;
-  margin-top: 0.7rem;
-  margin-bottom: 0.7rem;
+  margin: 0.7rem;
 }
 
 .presentation-main-skill {
@@ -19,8 +18,7 @@
   animation-duration: 1s;
   animation-delay: 0.2s;
   animation-fill-mode: forwards;
-  margin-top: 0.7rem;
-  margin-bottom: 0.7rem;
+  margin: 0.7rem 0;
 }
 
 .presentation-description {
@@ -29,6 +27,5 @@
   animation-duration: 1s;
   animation-delay: 0.4s;
   animation-fill-mode: forwards;
-  margin-top: 0.7rem;
-  margin-bottom: 0.7rem;
+  margin: 0.7rem 0;
 }
