--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,5 +1,6 @@
 .logo {
-  border-radius: 50%;
+  margin: auto;
+  height: auto;
   transform: rotate(180deg);
   transition: all 0.6s ease-out;
 }
@@ -8,8 +9,8 @@
   transition: all 0.6s ease-out;
 }
 .image-container {
-  padding: 15%;
-  width: 70%;
+  padding: 5%;
+  width: 90%;
   text-align: center;
   display: block;
 }
