--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -11,7 +11,39 @@ const { title } = Astro.props;
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<meta
+			name="description"
+			content="Carlos Jorge's personal portfolio. I show my most important github projects. The main goals of these projects is having fun and learn new technologies, good practices and try to make real creative ideas" />
+		<meta
+			name="keywords"
+			content="HTML,CSS,JavaScript,Github,Repository,Portfolio,Website,Github Page" />
+		<meta name="author" content="carlosjorger" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta property="og:locale" content="en_US" />
+		<meta property="og:url" content="https://carlosjorger.github.io" />
+		<meta property="og:type" content="website" />
+		<link rel="icon" type="image/svg+xml" href="/public/images/logo-icon.svg" />
+		<link rel="stylesheet" type="text/css" href="/src/styles/styles.css" />
+		<link rel="stylesheet" type="text/css" href="/src/styles/navbar.css" />
+		<link
+		  rel="stylesheet"
+		  type="text/css"
+		  href="/src/styles/presentation-section.css" />
+		<link rel="stylesheet" type="text/css" href="/src/styles/project-section.css" />
+		<link rel="stylesheet" type="text/css" href="/src/styles/footer.css" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+		  rel="preload"
+		  href="https://fonts.googleapis.com/css?family=Lato:400,700&display=swap"
+		  as="style"
+		  onload="this.onload=null;this.rel='stylesheet'"
+		  type="text/css" />
+		<link
+		  rel="preload"
+		  href="https://fonts.googleapis.com/css?family=Lato:400italic%27,700&display=swap"
+		  as="style"
+		  onload="this.onload=null;this.rel='stylesheet'"
+		  type="text/css" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
@@ -19,17 +51,4 @@ const { title } = Astro.props;
 		<slot />
 	</body>
 </html>
-<style is:global>
-	:root {
-		--accent: 124, 58, 237;
-		--accent-gradient: linear-gradient(45deg, rgb(var(--accent)), #da62c4 30%, white 60%);
-	}
-	html {
-		font-family: system-ui, sans-serif;
-		background-color: #F6F6F6;
-	}
-	code {
-		font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-			Bitstream Vera Sans Mono, Courier New, monospace;
-	}
-</style>
+
