--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,81 +1,218 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import Card from '../components/Card.astro';
+import Header from '../components/Header.astro';
+
+
 ---
 
-<Layout title="Welcome to Astro.">
+<script>
+	function reveal() {
+  var revealElements = document.getElementsByClassName("reveal");
+  [...revealElements].forEach(element => {
+    var windowHeight = window.innerHeight;
+    const elementTop = element.getBoundingClientRect().top;
+    const elementBottom = element.getBoundingClientRect().bottom;
+    if (
+      elementTop <
+        windowHeight - element.getBoundingClientRect().height + 150 &&
+      elementBottom >= 130
+    ) {
+      element.classList.add("active");
+    } else {
+      element.classList.remove("active");
+    }
+  });
+}
+function changeState( navColumnarMenuBackground) {
+  if (
+    !navColumnarMenuBackground.style.visibility ||
+    navColumnarMenuBackground.style.visibility === "hidden"
+  ) {
+    navColumnarMenuBackground.style.visibility = "visible";
+  } else {
+    navColumnarMenuBackground.style.visibility = "hidden";
+  }
+
+  [...document.getElementsByClassName("changeable")].forEach(element => {
+    element.classList.toggle("active");
+  });
+}
+window.addEventListener("scroll", reveal);
+document.addEventListener("DOMContentLoaded", function (event) {
+  [...document.getElementsByClassName("change-sidebar")].forEach(function (
+    element
+  ) {
+    element.addEventListener("click", () => {
+      const navColumnarMenuBackground = document.getElementsByClassName(
+        "nav-columnar-menu-background"
+      )[0];
+      changeState( navColumnarMenuBackground);
+    });
+  });
+  document.addEventListener(
+    "touchstart",
+    ev => {
+      const navColumnarMenuBackground = document.getElementsByClassName(
+        "nav-columnar-menu-background"
+      )[0];
+      if (ev.path[0].classList.contains("nav-columnar-menu-background")) {
+        changeState(navColumnarMenuBackground);
+      }
+    },
+    false
+  );
+});
+</script>
+<Layout title="Carlos Jorge's personal portfolio website">
+	<Header/>
 	<main>
-		<h1>Welcome to <span class="text-gradient">Astro</span></h1>
-		<p class="instructions">
-			To get started, open the directory <code>src/pages</code> in your project.<br />
-			<strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message above.
-		</p>
-		<ul role="list" class="link-card-grid">
-			<Card
-				href="https://docs.astro.build/"
-				title="Documentation"
-				body="Learn how Astro works and explore the official API docs."
-			/>
-			<Card
-				href="https://astro.build/integrations/"
-				title="Integrations"
-				body="Supercharge your project with new frameworks and libraries."
-			/>
-			<Card
-				href="https://astro.build/themes/"
-				title="Themes"
-				body="Explore a galaxy of community-built starter themes."
-			/>
-			<Card
-				href="https://astro.build/chat/"
-				title="Community"
-				body="Come say hi to our amazing Discord community. ❤️"
-			/>
-		</ul>
-	</main>
+		<section>
+		  <div class="presentation centered-article">
+			<div class="reveal active">
+			  <h1 class="presentation-title">
+				Hi, I am <br class="br-show" />Carlos Jorge, <br />
+				Web developer!
+			  </h1>
+			</div>
+			<div class="reveal active">
+			  <h2 class="presentation-main-skill">
+				Welcome to my personal portfolio!
+			  </h2>
+			</div>
+			<div class="reveal active">
+			  <p class="presentation-description">
+				I'm a cuban computer science from Havana University. Currently,
+				I'm working as full-stack engineer focused in building .net
+				application and their performance. Also, I work in frontend
+				websites using frameworks like angular, vue or react.
+			  </p>
+			</div>
+		  </div>
+		</section>
+		<section id="aboutMe">
+		  <div class="centered-article">
+			<header><h2 class="subtitle reveal">About me</h2></header>
+			<p class="reveal">
+			  Hello, My name is Carlos Jorge. I'm a full-stack engineer that enjoy
+			  coding on and off the work. I started working as a backend developer
+			  in 2020 using .net technologies and sql server.
+			</p>
+			<p class="reveal">
+			  Currently, I'm also working on frontend technologies like angular,
+			  vue, html, css.
+			</p>
+			<p class="reveal">
+			  In my free time I like listening to music, reading books or watching
+			  movies from favorite directors.
+			</p>
+		  </div>
+		</section>
+		<section id="work">
+		  <div class="card-projects">
+			<header>
+			  <h2 class="subtitle reveal">
+				Some projects<br />
+				I've made
+			  </h2>
+			</header>
+  
+			<article id="open-ecommerce" class="card-project reveal">
+			  <header class="card-title">
+				<h3>OpenEcommerce</h3>
+			  </header>
+			  <div class="card-description">
+				<p>
+				  OpenEcommerce is an ecommerce builded with .net using a
+				  hexagonal architecture, cqrs pattern and other patterns.
+				</p>
+			  </div>
+			  <div class="card-links">
+				<a
+				  aria-label="See my ecommerce github project"
+				  href="https://github.com/carlosjorger/openEcommerce"
+				  ><i class="svg-icon icon-github svg-icon-s"></i
+				></a>
+			  </div>
+			</article>
+			<article id="angular-portfolio" class="card-project reveal">
+			  <header class="card-title">
+				<h3>Angular Portfolio</h3>
+			  </header>
+			  <div class="card-description">
+				<p>
+				  It is a personal portfolio builded with angular using really
+				  cool animation (Angular animations).
+				</p>
+			  </div>
+			  <div class="card-links">
+				<a
+				  aria-label="See my portfolio github project"
+				  href="https://github.com/carlosjorger/portfolio"
+				  ><i class="svg-icon icon-github svg-icon-s"></i
+				></a>
+			  </div>
+			</article>
+			<article id="online-cv-maker" class="card-project reveal">
+			  <header class="card-title">
+				<h3>Online CV Maker</h3>
+			  </header>
+			  <div class="card-description">
+				<p>An online cv maker made in astro using vuejs components.</p>
+			  </div>
+			  <div class="card-links">
+				<a
+				  aria-label="See online cv maker"
+				  href="https://github.com/carlosjorger/astro-vue-online-cv-maker"
+				  ><i class="svg-icon icon-github svg-icon-s"></i
+				></a>
+			  </div>
+			</article>
+		  </div>
+		</section>
+	  </main>
+	  <footer>
+		<div class="footer">
+		  <div id="contact" class="contacts reveal">
+			<h2 class="subtitle contacts-item">Contact</h2>
+			<address class="contacts-item">
+			  <a
+				href="mailto:rodriguezcuelloc@gmail.com"
+				aria-label="contact via this email address"
+				><i class="svg-icon icon-google"></i
+			  ></a>
+			  <a
+				href="https://github.com/carlosjorger"
+				aria-label="See my github profile"
+				><i class="svg-icon icon-github"></i
+			  ></a>
+			  <a
+				href="https://www.linkedin.com/in/carlosjorger/"
+				aria-label="See my linkedin profile and connect with me"
+				><i class="svg-icon icon-linkedin"></i
+			  ></a>
+			  <a
+				href="https://twitter.com/carlosjorgerc"
+				aria-label="See my twitter profile and follow me"
+				><i class="svg-icon icon-twitter"> </i
+			  ></a>
+			</address>
+		  </div>
+		  <div class="footer-info reveal">
+			<p class="footer-info-item">
+			  <strong class="year">© 2022 Carlos Jorge</strong>
+			  <br />
+			  <a
+				class="work-link"
+				href="https://github.com/carlosjorger/carlosjorger.github.io"
+				>Published</a
+			  >
+			  in
+			  <a class="work-link" href="https://pages.github.com/"
+				>Github Page</a
+			  >
+			</p>
+		  </div>
+		</div>
+	  </footer>
 </Layout>
 
-<style>
-	main {
-		margin: auto;
-		padding: 1.5rem;
-		max-width: 60ch;
-	}
-	h1 {
-		font-size: 3rem;
-		font-weight: 800;
-		margin: 0;
-	}
-	.text-gradient {
-		background-image: var(--accent-gradient);
-		-webkit-background-clip: text;
-		-webkit-text-fill-color: transparent;
-		background-size: 400%;
-		background-position: 0%;
-	}
-	.instructions {
-		line-height: 1.6;
-		margin: 1rem 0;
-		border: 1px solid rgba(var(--accent), 25%);
-		background-color: white;
-		padding: 1rem;
-		border-radius: 0.4rem;
-	}
-	.instructions code {
-		font-size: 0.875em;
-		font-weight: bold;
-		background: rgba(var(--accent), 12%);
-		color: rgb(var(--accent));
-		border-radius: 4px;
-		padding: 0.3em 0.45em;
-	}
-	.instructions strong {
-		color: rgb(var(--accent));
-	}
-	.link-card-grid {
-		display: grid;
-		grid-template-columns: repeat(auto-fit, minmax(24ch, 1fr));
-		gap: 1rem;
-		padding: 0;
-	}
-</style>
