--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -22,7 +22,7 @@ const { title } = Astro.props;
 		<meta property="og:locale" content="en_US" />
 		<meta property="og:url" content="https://carlosjorger.github.io" />
 		<meta property="og:type" content="website" />
-		<link rel="icon" type="image/svg+xml" href="/public/images/logo-icon.svg" />
+		<link rel="icon" type="image/svg+xml" href="/images/logo-icon.svg" />
 		<link rel="stylesheet" type="text/css" href="/src/styles/styles.css" />
 		<link rel="stylesheet" type="text/css" href="/src/styles/navbar.css" />
 		<link
