--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,8 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import Header from "../components/Header.astro";
+import Header from "../components/Header/Header.astro";
 import AboutMe from "../components/AboutMe.astro";
-import Footer from "../components/Footer.astro";
+import Footer from "../components/Footer/Footer.astro";
 import Work from "../components/Work/Work.astro";
 import Presentation from "../components/Presentation.astro";
 ---
