--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -41,7 +41,7 @@ section {
   width: 60%;
   margin: 3em auto;
   padding-top: 2em;
-  height: calc(100vh - 6em);
+  height: 100vh;
   z-index: 2;
 }
 
