remove some css clases

--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -37,7 +37,9 @@ import SideBarLink from "./SideBarLink.astro";
             height="200"
           />
         </picture>
-        <hr />
+        <hr
+          class="w-[80%] border-0 h-0.5 bg-[var(--default-font-color)] m-auto"
+        />
         <nav>
           <ul id="nav-columnar-menu-list">
             <SideBarLink href="#" label="Home" iconType="icon-house" />
