--- a/src/components/Header/Link.astro
+++ b/src/components/Header/Link.astro
@@ -5,4 +5,9 @@ export interface Props {
 const { href } = Astro.props;
 ---
 
-<a class="nav-link change-sidebar" href={href}> <slot /></a>
+<a
+  class="p-3 text-[var(--default-font-color)] no-underline hover:transition-colors hover:duration-500 hover:ease-in-out hover:bg-[#241c2d] hover:text-[var(--default-secundary-font-color)] change-sidebar"
+  href={href}
+>
+  <slot /></a
+>
